--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "changelog-scanner",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
@@ -13,5 +13,9 @@
     "qs": "^6.9.4",
     "request": "^2.88.2",
     "request-promise": "^4.2.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/apostrophecms/changelog-scanner.git"
   }
 }
